// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionHistory should render correctly when empty 1`] = `
<Screen
  header={<TransactionHistoryHeader />}
>
  <EmptyTransactionHistory />
</Screen>
`;

exports[`TransactionHistory should render correctly with tx 1`] = `
<Screen
  header={<TransactionHistoryHeader />}
>
  <FlatList
    contentContainerStyle={
      [
        {
          "gap": 16,
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {},
      ]
    }
    data={
      [
        {
          "amount": 900,
          "confirmed": false,
          "date": 2022-09-14T16:14:02.835Z,
          "height": undefined,
          "id": "txid1",
          "offerData": [
            {
              "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
              "amount": 900,
              "contractId": undefined,
              "currency": undefined,
              "offerId": "123",
              "price": undefined,
            },
          ],
          "type": "TRADE",
        },
        {
          "amount": 900,
          "confirmed": true,
          "date": 2022-09-14T16:14:02.835Z,
          "height": 1,
          "id": "txid1",
          "offerData": [
            {
              "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
              "amount": 900,
              "contractId": undefined,
              "currency": undefined,
              "offerId": "123",
              "price": undefined,
            },
          ],
          "type": "TRADE",
        },
      ]
    }
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={20}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
</Screen>
`;

exports[`TransactionHistory should render medium screens correctly 1`] = `
<Screen
  header={<TransactionHistoryHeader />}
>
  <FlatList
    contentContainerStyle={
      [
        {
          "gap": 16,
          "paddingBottom": 16,
          "paddingTop": 16,
        },
        {
          "paddingBottom": 32,
          "paddingTop": 32,
        },
      ]
    }
    data={
      [
        {
          "amount": 900,
          "confirmed": false,
          "date": 2022-09-14T16:14:02.835Z,
          "height": undefined,
          "id": "txid1",
          "offerData": [
            {
              "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
              "amount": 900,
              "contractId": undefined,
              "currency": undefined,
              "offerId": "123",
              "price": undefined,
            },
          ],
          "type": "TRADE",
        },
        {
          "amount": 900,
          "confirmed": true,
          "date": 2022-09-14T16:14:02.835Z,
          "height": 1,
          "id": "txid1",
          "offerData": [
            {
              "address": "bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh",
              "amount": 900,
              "contractId": undefined,
              "currency": undefined,
              "offerId": "123",
              "price": undefined,
            },
          ],
          "type": "TRADE",
        },
      ]
    }
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={20}
    onRefresh={[MockFunction]}
    refreshing={false}
    renderItem={[Function]}
  />
</Screen>
`;
